--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name">Anticipate</string>
     <string name="desc">Linklerin otomatik algılanması için lütfen Anticipate\'nin erişilebilirlik servisini etkinleştirin</string>
     <string name="enable_accessibility_service">Erişilebilirlik Servisini Etkinleştir</string>
-    <string name="desc_default">Bütün linkleri Anticipate ile açmak için varsayılan tarayıcı olarak belirlemelisiniz</string>
+    <string name="desc_default">Bütün linkleri Anticipate ile açmak için, onu varsayılan tarayıcı olarak belirlemelisiniz</string>
     <string name="set_as_default_browser">Varsayılan tarayıcı olarak belirle</string>
     <string name="dialog_clear_defaults">Başka bir tarayıcı varsayılan olarak belirlenmiş. Anticipate\'yi varsayılan olarak ayarlamak için diğer tarayıcının varsayılanını kaldırın.</string>
     <string name="try_it_out">Şimdi deneyin</string>
@@ -11,6 +11,7 @@
     <string name="dialog_draw_overlay">Kayan pencereyi Anroid 6.0+ bir sürümde kullanmak için \"Diğer Uygulamaların Üzerinde Görüntüleme\" iznini verin</string>
     <string name="open_settings">Ayarları Aç</string>
     <string name="open_settings_failed_clear_deafults">Ayarlar açılamadı. Lütfen şimdiki tarayıcınızın varsayılanlarını elle kaldırın.</string>
+    <string name="open_settings_failed_overlay">"Açılış ayarları olmadı. Lütfen diğer uygulamalar üzerinden elle, Anticipate için ayarları etkinleştirin. "</string>
     <string name="accessibility_disabled">Anticipate\'nin erişilebilirlik servisi devre dışı. Linkleri önyüklemek için aktifleştirin.</string>
     <string name="floating_window_checkbox">Son algılanan linkleri kayan pencerede göster</string>
     <string name="anticipate_url_monitor">Anticipate URL Monitörü</string>
@@ -45,8 +46,11 @@ Kaynak kodu, hatalar ve yeni özellik istekleri için <a href=\'https://github.c
     <string name="no_whitelisted_apps">Beyaz listeye alınmış uygulama yok</string>
     <string name="swipe_to_remove">Silmek için kaydırın</string>
     <string name="accessibility_service_not_active">Anticipate\'nin erişilebilirlik servisi inaktif. Lütfen elle kapatıp açın.</string>
-    <string name="dynamic_toolbar_color">Dinamik araç çubuğu rengi</string>
+    <string name="dynamic_toolbar_color">"Sayfa tabanlı araç çubuğu rengi "</string>
     <string name="toolbar_color_desc">Websiteye özel araç çubuğu kullan (ayarlıysa). Site ikinci kez açıldığında aktifleşir.</string>
+    <string name="dynamic_page_toolbar_color">"Sayfa tabanlı araç çubuğu rengi (BETA) "</string>
+    <string name="dynamic_page_toolbar_color_desc">Araç çubuğu rengi olarak kaynak sayfası/uygulama, birincil renk olarak  kullanın</string>
+    <string name="enable_service_page_toolbar">Sayfa tabanlı araç çubuğu rengini kullanabilmek için erişebilirlik etkin olmalıdır</string>
     <string name="default_toolbar_color">Varsayılan araç çubuğu rengi</string>
     <string name="share">Paylaş</string>
     <string name="animation">Animasyon:</string>
