--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,7 +73,7 @@
     <string name="using_anticipate">using Anticipate</string>
     <string name="using_browser">using browser</string>
     <string name="anticipate_update">Anticipate updated to v%s</string>
-    <string name="anticipate_update_desc">Touch to check out the new features</string>
+    <string name="anticipate_update_desc">Touch to see what\'s new</string>
     <string name="open_in_quick_switch_bubble">Open in QuickSwitch Bubble (BETA)</string>
     <string name="quick_switch_bubble_desc">Starts loading links in Custom Tabs and resumes your previous app, with bubbles to open the loaded websites</string>
     <string name="enable_service_quick_switch">The accessibility service must be enabled to use QuickSwitch Bubbles.</string>
