--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,4 +83,5 @@
     <string name="bubble_notif">Anticipate QuickSwitch Bubbles</string>
     <string name="bubble_notif_desc">Touch to end service</string>
     <string name="minimize_to_bubble">Minimize to QuickSwitch Bubble</string>
+    <string name="close_bubble">Close Bubble</string>
 </resources>
